src/styles.scss
/* ... */
#main-content {
    #first-page {
        opacity: 1;
        transition: opacity 1s ease-in-out;
        font-weight: 100;

        #gift-description {
            margin: 40px 0;
        }

        button {
            margin-bottom: 20px;
        }
    }

    #second-page {
        position: relative;
        display: flex;
        flex-direction: row;
        min-height: 100vh;
        margin-bottom: -50px;

        p {
            text-align: center;
            font-size: 14px;
        }

        h1 {
            margin: 14px 0;
            text-align: center;
        }

        #place-description {
            width: 100vw;
            min-height: 100%;
            box-sizing: border-box;
            padding-bottom: 50px;
            transform: translateX(0);
            transition: all 0.8s ease-in-out;

            &.show-description {
                transform: translateX(-50%);

                #place-description-intro {
                    position: absolute;
                    overflow: hidden;
                    top: 0;
                    max-height: 100%;
                    bottom: 0;
                }

                div.place-description {
                    left: 50%;
                }
            }

            #place-description-container {
                position: relative;
                width: 100%;
                height: 100%;
                display: flex;
            }

            #place-description-list {
                margin: 0;
                padding: 0;
                list-style-type: none;

                button {
                    position: relative;
                    display: block;
                    width: 100%;
                    margin-bottom: 10px;
                    padding: 10px 24px 10px 10px;
                    font-size: 14px;
                    background: #f0f0f0;
                    color: #6e6e6e;
                    border: none;
                    text-align: left;
                    border-radius: 6px;
                    cursor: pointer;
                    transition: all 0.2s ease-in-out;

                    .right-arrow {
                        position: absolute;
                        width: 16px;
                        right: 8px;
                        top: 8px;
                        fill: #8d8d8d;
                        transition: all 0.2s ease-in-out;
                    }

                    &:hover {
                        background: #e3e3e3;

                        .right-arrow {
                            fill: #414141;
                        }
                    }
                }
            }

            #place-description-intro, div.place-description {
                width: 50vw;
                margin-bottom: -50px;
                padding: 30px 30px 80px 30px;
                box-sizing: border-box;
                background: white;
            }

            #place-description-intro-container {
                opacity: 1;
                transition: opacity 1s ease-in-out;
            }

            div.place-description {
                position: relative;
                height: 100%;
                padding-bottom: 80px;
                box-sizing: border-box;
                text-align: center;
                transition: all 1s ease-in-out;

                img {
                    margin: 5px;
                    border: 5px solid #f0f0f0;
                    cursor: pointer;
                    transition: 0.2s ease-in-out;

                    &:hover {
                        border-color: $green;
                    }
                }

                .link {
                    position: absolute;
                    display: block;
                    box-sizing: border-box;
                    width: 100%;
                    max-width: 200px;
                    bottom: 0;
                    left: 50%;
                    transform: translateX(-50%);
                    margin: 20px 0;
                }

                .back-to-list {
                    position: relative;
                    display: block;
                    padding: 10px 20px 10px 30px;
                    background: #f0f0f0;
                    border: none;
                    border-radius: 20px;
                    color: #606060;
                    font-size: 12px;
                    text-align: left;
                    cursor: pointer;
                    outline: none;
                    transition: all 0.2s ease-in-out;

                    .left-arrow {
                        position: absolute;
                        width: 14px;
                        top: 13px;
                        left: 10px;
                        fill: gray;
                        transition: all 0.2s ease-in-out;
                    }

                    &:hover {
                        background: #e3e3e3;

                        .left-arrow {
                            fill: #414141;
                        }
                    }
                }

                &.show {
                    position: absolute;
                    opacity: 0;
                    z-index: 10;
                }
            }
        }

        #map {
            position: fixed;
            width: 50%;
            left: 50%;
            height: 100%;
            padding-bottom: 50px;
            box-sizing: border-box;
            transform: none;
            transform-origin: bottom left;
            transition: all 1s ease-out;

            #map-container {
                height: 100%;
            }

            .marker {
                background: url('img/pin.svg') no-repeat;
                background-size: contain;
                width: 20px;
                height: 29px;
                cursor: pointer;
            }
        }
    }
}
/* ... */

